--- a/HRApplication/ClientApp/src/styles.css
+++ b/HRApplication/ClientApp/src/styles.css
@@ -1,4 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'ag-grid-community/dist/styles/ag-grid.css';
+@import 'ag-grid-community/dist/styles/ag-theme-balham.css';
+@import 'ag-grid-community/dist/styles/ag-theme-balham-dark.css';
  html body {
 background-color: rgb(80, 79, 79);
  }
