--- a/HRApplication/ClientApp/src/app/absencehistorydata/absencehistorydata.component.html
+++ b/HRApplication/ClientApp/src/app/absencehistorydata/absencehistorydata.component.html
@@ -1,8 +1,12 @@
+<div>
 <ag-grid-angular
-    style="width: 700px; height: 500px; margin-top:20px;"
+id="tab"
+    
     class="ag-theme-balham-dark"
     [enableSorting]="true"
     [enableFilter]="true"
     [rowData]="rowData"
     [columnDefs]="columnDefs">
 </ag-grid-angular>
+</div>
+
