--- a/HRApplication/ClientApp/src/app/navbar/navbar.component.html
+++ b/HRApplication/ClientApp/src/app/navbar/navbar.component.html
@@ -8,15 +8,15 @@
 
 
 <ng-template #absencesInActive>
-  <button (click)="GetAbsences()" type="button" class="btn btn-dark"> Absences</button>
+  <button (click)="GetAbsences()" type="button" class="btn btn-info"> Absences</button>
 </ng-template>
 
 <ng-template #absencesHistoryInActive>
-  <button (click)="GetAbsencesHistory()" type="button" class="btn btn-dark"> Absences History</button>
+  <button (click)="GetAbsencesHistory()" type="button" class="btn btn-info"> Absences History</button>
 </ng-template>
 
 <ng-template #workersInActive>
-  <button (click)="GetWorkers()" type="button" class="btn btn-dark"> Workers</button>
+  <button (click)="GetWorkers()" type="button" class="btn btn-info"> Workers</button>
 </ng-template>
 
 
