--- a/HRApplication/ClientApp/src/styles.css
+++ b/HRApplication/ClientApp/src/styles.css
@@ -2,6 +2,7 @@
 @import 'ag-grid-community/dist/styles/ag-grid.css';
 @import 'ag-grid-community/dist/styles/ag-theme-balham.css';
 @import 'ag-grid-community/dist/styles/ag-theme-balham-dark.css';
+@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
  html body {
 background-color: rgb(80, 79, 79);
  }
