--- a/HRApplication/ClientApp/src/app/app.component.css
+++ b/HRApplication/ClientApp/src/app/app.component.css
@@ -1,16 +1,21 @@
+
+
 #navbar{
-    position: fixed;
-    text-align: center;
-    background-color: black;
-    height: 100vh;
-    width: 200px;
-    border-right-color: white;
-    border-right-style: solid;
-  }
-  #maincontent{
-    margin-left: 250px;
-  }
-  div{
-    display: inline-table;
-    color:white;
-  }
+  background-color: black;
+  width: 200px;
+  height: 100vh;
+  float:left;
+  text-align: center;
+
+}
+#maincontent{
+  overflow: hidden;
+  height: 100vh;
+  float:none;
+  text-align: center;
+  
+}
+div{
+  color: white;
+}
+
