--- a/HRApplication/ClientApp/src/app/workersdata/workersdata.component.html
+++ b/HRApplication/ClientApp/src/app/workersdata/workersdata.component.html
@@ -1,5 +1,5 @@
 <ag-grid-angular
-    style="width: 370px; height: 500px; margin-top:20px;"
+    id="tab"
     class="ag-theme-balham-dark"
     [enableSorting]="true"
     [enableFilter]="true"
