Add limit of absences (change Worker model and modified AddNewAbsence and DeleteAbsences methods in DataRepostiory, add method to NewAbsenceVeryficator)

--- a/HRApplication/ClientApp/src/app/newabsence/newabsence.component.html
+++ b/HRApplication/ClientApp/src/app/newabsence/newabsence.component.html
@@ -27,5 +27,6 @@
       </div>
 
       <div id=applyButton>
-        <button type="button" class="btn btn-dark" (click)="AddAbsence()">Apply absence</button>
+        <button type="button" class="btn btn-dark" (click)="AddAbsence()">Apply absence</button><br>
+        {{statusMessage}}
       </div>
