Add types of absence days (add FreeDaysCounter, add migration to database -L4 column, modified models-L4 property)

--- a/HRApplication/ClientApp/src/app/newabsence/newabsence.component.html
+++ b/HRApplication/ClientApp/src/app/newabsence/newabsence.component.html
@@ -7,7 +7,11 @@
           </mat-option>
         </mat-select>
       </mat-form-field>
+      <label>
+        <input id ="checkbox" type="checkbox" [(ngModel)]="isL4"> L4
+      </label>
     </div>
+
 
     <div id="dates">
 
